# zellij-tabbar

./: .prototools  .release-please-manifest.json  CONTEXT.md  Cargo.toml  README.md  moon.yml  release-please-config--hotfix.json  release-please-config--release.json
.github/: moon.yml
.github/actions/moon-cache/: action.yml
.github/actions/sync-moon-to-release-please/: action.sh  action.yml  sync.bats
.github/tasks/: checkout-publish-source  checkout-publish-source.bats  ensure-publish-release  ensure-publish-release.bats  get-publish-matrix  get-release-policy  release-automation.bats  summarise-release-please.sh
.github/workflows/: pr-title.yml  pr.yml  publish.yml  release.yml  stale.yml
.moon/: toolchains.yml  workspace.yml
.moon/tasks/: publish-crate.yml  publish-wasm.yml
docs/adr/: 0001-trust-external-templates-with-host-file-access.md
pkgs/tools/deployment/: moon.yml  resolve-publish-metadata
pkgs/tools/deployment/tests/: resolve-publish-metadata.bats
pkgs/zellij-tabbar/: CHANGELOG.md  Cargo.toml  README.md  demo.kdl  moon.yml
pkgs/zellij-tabbar/src/: main.rs  render.rs
pkgs/zellij-tabbar/src/render/: mod.rs  template.rs
pkgs/zellij-tabbar/src/template/: clock.jinja  main.jinja  tabs.jinja
pkgs/zellij-template-render/: CHANGELOG.md  Cargo.toml  README.md  moon.yml
pkgs/zellij-template-render/src/: file_template.rs  layout.rs  lib.rs  template.rs
src/: main.rs  template.rs
tests/: template_e2e.bats
