[package]
name = "zellij-tabbar"
version = "0.1.0"
edition = "2021"
description = "Zellij tab bar plugin for Pi agent sessions"
license = "MIT"

[dependencies]
ansi_term = "0.12"
colored = "2"
chrono = "0.4"
minijinja = "2.21"
serde = { version = "1", features = ["derive"] }
unicode-width = "0.1.8"
zellij-tile = "=0.44.0"
zellij-tile-utils = "=0.44.0"

[lints.clippy]
too_many_arguments = "allow"
useless_format = "allow"
